Refactor input to prevent hotkey overlap issues